[WFCORE-94] Facitilitate usage of -secmgr flag in startup scripts and propagate through domain